tests/ui/to_field_attribute_without_config.rs
use mapper_impl::Mapper;

#[derive(Mapper)]
#[to(Person)]
pub struct User{
    #[to(Person)]
    pub name: String
}

pub struct Person{
    pub name: String
}

fn main(){}